# api/rank/ranking.pb.validate.go
@@ -1,0 +1,381 @@
+// Code generated by protoc-gen-validate. DO NOT EDIT.
+// source: rank/ranking.proto
+
+package blogv1
+
+import (
+	"bytes"
+	"errors"
+	"fmt"
+	"net"
+	"net/mail"
+	"net/url"
+	"regexp"
+	"sort"
+	"strings"
+	"time"
+	"unicode/utf8"
+
+	"google.golang.org/protobuf/types/known/anypb"
+)
+
+// ensure the imports are used
+var (
+	_ = bytes.MinRead
+	_ = errors.New("")
+	_ = fmt.Print
+	_ = utf8.UTFMax
+	_ = (*regexp.Regexp)(nil)
+	_ = (*strings.Reader)(nil)
+	_ = net.IPv4len
+	_ = time.Duration(0)
+	_ = (*url.URL)(nil)
+	_ = (*mail.Address)(nil)
+	_ = anypb.Any{}
+	_ = sort.Sort
+)
+
+// Validate checks the field values on HotRankItem with the rules defined in
+// the proto definition for this message. If any rules are violated, the first
+// error encountered is returned, or nil if there are no violations.
+func (m *HotRankItem) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on HotRankItem with the rules defined in
+// the proto definition for this message. If any rules are violated, the
+// result is a list of violation errors wrapped in HotRankItemMultiError, or
+// nil if none found.
+func (m *HotRankItem) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *HotRankItem) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for ArticleId
+
+	// no validation rules for Views
+
+	if len(errors) > 0 {
+		return HotRankItemMultiError(errors)
+	}
+
+	return nil
+}
+
+// HotRankItemMultiError is an error wrapping multiple validation errors
+// returned by HotRankItem.ValidateAll() if the designated constraints aren't met.
+type HotRankItemMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m HotRankItemMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m HotRankItemMultiError) AllErrors() []error { return m }
+
+// HotRankItemValidationError is the validation error returned by
+// HotRankItem.Validate if the designated constraints aren't met.
+type HotRankItemValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e HotRankItemValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e HotRankItemValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e HotRankItemValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e HotRankItemValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e HotRankItemValidationError) ErrorName() string { return "HotRankItemValidationError" }
+
+// Error satisfies the builtin error interface
+func (e HotRankItemValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sHotRankItem.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = HotRankItemValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = HotRankItemValidationError{}
+
+// Validate checks the field values on GetHotRankingRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetHotRankingRequest) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetHotRankingRequest with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetHotRankingRequestMultiError, or nil if none found.
+func (m *GetHotRankingRequest) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetHotRankingRequest) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	// no validation rules for Type
+
+	// no validation rules for Limit
+
+	if len(errors) > 0 {
+		return GetHotRankingRequestMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetHotRankingRequestMultiError is an error wrapping multiple validation
+// errors returned by GetHotRankingRequest.ValidateAll() if the designated
+// constraints aren't met.
+type GetHotRankingRequestMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetHotRankingRequestMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetHotRankingRequestMultiError) AllErrors() []error { return m }
+
+// GetHotRankingRequestValidationError is the validation error returned by
+// GetHotRankingRequest.Validate if the designated constraints aren't met.
+type GetHotRankingRequestValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetHotRankingRequestValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetHotRankingRequestValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetHotRankingRequestValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetHotRankingRequestValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetHotRankingRequestValidationError) ErrorName() string {
+	return "GetHotRankingRequestValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetHotRankingRequestValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetHotRankingRequest.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetHotRankingRequestValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetHotRankingRequestValidationError{}
+
+// Validate checks the field values on GetHotRankingResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the first error encountered is returned, or nil if there are no violations.
+func (m *GetHotRankingResponse) Validate() error {
+	return m.validate(false)
+}
+
+// ValidateAll checks the field values on GetHotRankingResponse with the rules
+// defined in the proto definition for this message. If any rules are
+// violated, the result is a list of violation errors wrapped in
+// GetHotRankingResponseMultiError, or nil if none found.
+func (m *GetHotRankingResponse) ValidateAll() error {
+	return m.validate(true)
+}
+
+func (m *GetHotRankingResponse) validate(all bool) error {
+	if m == nil {
+		return nil
+	}
+
+	var errors []error
+
+	for idx, item := range m.GetItems() {
+		_, _ = idx, item
+
+		if all {
+			switch v := interface{}(item).(type) {
+			case interface{ ValidateAll() error }:
+				if err := v.ValidateAll(); err != nil {
+					errors = append(errors, GetHotRankingResponseValidationError{
+						field:  fmt.Sprintf("Items[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			case interface{ Validate() error }:
+				if err := v.Validate(); err != nil {
+					errors = append(errors, GetHotRankingResponseValidationError{
+						field:  fmt.Sprintf("Items[%v]", idx),
+						reason: "embedded message failed validation",
+						cause:  err,
+					})
+				}
+			}
+		} else if v, ok := interface{}(item).(interface{ Validate() error }); ok {
+			if err := v.Validate(); err != nil {
+				return GetHotRankingResponseValidationError{
+					field:  fmt.Sprintf("Items[%v]", idx),
+					reason: "embedded message failed validation",
+					cause:  err,
+				}
+			}
+		}
+
+	}
+
+	if len(errors) > 0 {
+		return GetHotRankingResponseMultiError(errors)
+	}
+
+	return nil
+}
+
+// GetHotRankingResponseMultiError is an error wrapping multiple validation
+// errors returned by GetHotRankingResponse.ValidateAll() if the designated
+// constraints aren't met.
+type GetHotRankingResponseMultiError []error
+
+// Error returns a concatenation of all the error messages it wraps.
+func (m GetHotRankingResponseMultiError) Error() string {
+	msgs := make([]string, 0, len(m))
+	for _, err := range m {
+		msgs = append(msgs, err.Error())
+	}
+	return strings.Join(msgs, "; ")
+}
+
+// AllErrors returns a list of validation violation errors.
+func (m GetHotRankingResponseMultiError) AllErrors() []error { return m }
+
+// GetHotRankingResponseValidationError is the validation error returned by
+// GetHotRankingResponse.Validate if the designated constraints aren't met.
+type GetHotRankingResponseValidationError struct {
+	field  string
+	reason string
+	cause  error
+	key    bool
+}
+
+// Field function returns field value.
+func (e GetHotRankingResponseValidationError) Field() string { return e.field }
+
+// Reason function returns reason value.
+func (e GetHotRankingResponseValidationError) Reason() string { return e.reason }
+
+// Cause function returns cause value.
+func (e GetHotRankingResponseValidationError) Cause() error { return e.cause }
+
+// Key function returns key value.
+func (e GetHotRankingResponseValidationError) Key() bool { return e.key }
+
+// ErrorName returns error name.
+func (e GetHotRankingResponseValidationError) ErrorName() string {
+	return "GetHotRankingResponseValidationError"
+}
+
+// Error satisfies the builtin error interface
+func (e GetHotRankingResponseValidationError) Error() string {
+	cause := ""
+	if e.cause != nil {
+		cause = fmt.Sprintf(" | caused by: %v", e.cause)
+	}
+
+	key := ""
+	if e.key {
+		key = "key for "
+	}
+
+	return fmt.Sprintf(
+		"invalid %sGetHotRankingResponse.%s: %s%s",
+		key,
+		e.field,
+		e.reason,
+		cause)
+}
+
+var _ error = GetHotRankingResponseValidationError{}
+
+var _ interface {
+	Field() string
+	Reason() string
+	Key() bool
+	Cause() error
+	ErrorName() string
+} = GetHotRankingResponseValidationError{}
